kubernetes/deployment.yml

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: communication
  namespace: default
  labels:
    app: devtroy
  annotations:
    persianblackid: helloprofile.communication.deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      name: communication
  template:
    metadata:
      labels:
        name: communication
    spec:
      volumes:
        - name: persian-black-logs-communication
          persistentVolumeClaim:
            claimName: helloprofile-logs
      containers:
        - name: communication
          image: gcr.io/bionic-region-347614/github.com/persianblack/communication
          ports:
            - containerPort: 8083
              protocol: TCP
          resources:
            limits:
              cpu: 50m
              memory: 15Mi
            requests:
              cpu: 45m
              memory: 10Mi
          volumeMounts:
            - name: persian-black-logs-communication
              mountPath: /usr/local/bin/log
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
          readinessProbe:
            httpGet:
              path: /ping
              port: 8083
          livenessProbe:
            httpGet:
              path: /ping
              port: 8083     
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
