kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: communication-service
  namespace: default
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8083
  selector:
    name: communication
  type: NodePort
