kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: communication-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "wecommunication-ip"
spec:
  defaultBackend:
    service:
      name: communication-service
      port:
        number: 8083
